# electroservice

./: Dockerfile  Makefile  Readme.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
app/: __init__.py  app_config.py  auth.py  db.sqlite  forms.py  main.py  models.py
app/static/css/: style.css
app/templates/: base.html  del.html  expense_form.html  index.html
app/templates/authTemplates/: login.html  registration.html
app/templates/components/: footer.html  messages.html  navbar.html
docker/env/: .env
docker/nginx/prod/: django.conf  flask.conf
migrations/versions/: 7f83692539f5_.py  8d4d7ae25e60_.py
